Fix bugs after testing

--- a/configs/credentials.yaml
+++ b/configs/credentials.yaml
@@ -1,9 +1,12 @@
-- id: 1
+- name: 1
   role: director
+  character: 1
   token: directordirectordirectordirectordirector
-- id: 2
+- name: 2
   role: agent
+  character: 2
   token: role1role1role1role1role1role1role1role1
-- id: 3
+- name: 3
   role: agent
+  character: 2
   token: role2role2role2role2role2role2role2role2
