Change configs based on new Gimulator config reader

--- a/configs/credentials.yaml
+++ b/configs/credentials.yaml
@@ -1,12 +1,12 @@
 - name: 1
   role: director
-  character: 1
+  character: director
   token: directordirectordirectordirectordirector
 - name: 2
   role: agent
-  character: 2
+  character: actor
   token: role1role1role1role1role1role1role1role1
 - name: 3
   role: agent
-  character: 2
+  character: actor
   token: role2role2role2role2role2role2role2role2
